Updated Swagger and Morgan
